@@ -21,7 +21,7 @@ EXEC=exult
 MAIN_OBJS=actions.o actorio.o actors.o alloc.o animate.o \
 	args.o barge.o bodies.o\
 	combat.o delobjs.o dir.o drag.o effects.o egg.o\
-	exult.o gameclk.o gamedat.o \
+	exult.o gameclk.o gamedat.o gamerend.o \
 	gametxt.o gamewin.o gumps.o imagescl.o imagewin.o items.o \
 	lists.o mouse.o \
 	npcnear.o npctime.o objs.o palette.o paths.o readnpcs.o \
